--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
   <head>
-    <title>Brady Painter</title>
+    <title>Brady Painter's portfolio</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
@@ -13,8 +13,8 @@
   <section>
   <table class="anchor-page" align="center">
     <tbody>
-      <td class="present-about"><a href="index.html">About</a></td>
-      <td><a href="portfolio.html">Portfolio</a></td>
+      <td><a href="index.html">About</a></td>
+      <td class="present-about"><a href="portfolio.html">Portfolio</a></td>
     </tbody>
   </table>
   </section>
@@ -23,15 +23,33 @@
 
   <section>
 
-  <h3>AN ASPIRING WEB DEVELOPER</h3>
+  <h3>EXPERIENCE</h3>
     <table> 
-    <td><p>Hi there! I'm Brady Painter, a Seattle transplant. I am searching for a web deveopment career that offers me an opportunity to use my knowledge of HTML, CSS & JavaScript and my understanding and appreciation of Deaf culture in order to provide web services for the Deaf community. In my spare time I love going out with friends, playing video games, and also have a huge affection for pets.
+    <td><p>I am currently taking a Front-End Web Development at General Assembly where I am learning HTML, CSS, JavaScript & jQuery and how to be an awesome developer!
     </p></td>
     <td><img src="https://instagram.fsnc1-1.fna.fbcdn.net/t51.2885-19/s150x150/12912419_506724922845160_225899984_a.jpg" alt="Instagram photo" border="5"></td> 
     </table>
   </section>
 
   <hr>
+
+  <section>
+    <h3>PORTFOLIO</h3>
+    <table class="table-portfolio" border="1" align="center">
+      <thead>
+        <tr>
+          <td>Coming soon</td>
+          <td>Coming soon</td>
+        </tr>
+        <tr>
+          <td>Coming soon</td>
+          <td>Coming soon</td>
+        </tr>
+      </thead>
+    </table>
+  </section>
+
+ <hr>
 
   <section>
     <table class="contact" align="center">
