--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   </head>
   <body>
 
+  <hr class="hr-bold">
+
   <section>
     <h1>Brady Painter</h1>
   </section>
@@ -24,9 +26,9 @@
   <section>
   <h3>AN ASPIRING WEB DEVELOPER</h3>
     <table> 
-    <td><p>Hi there! I'm Brady Painter, a Seattle transplant. I am searching for a web deveopment career that offers me an opportunity to use my knowledge of HTML, CSS & JavaScript and my understanding and appreciation of Deaf culture in order to provide web services for the Deaf community. In my spare time I love going out with friends, playing video games, and also have a huge affection for pets.
-    </p></td>
-    <td><img src="https://instagram.fsnc1-1.fna.fbcdn.net/t51.2885-19/s150x150/12912419_506724922845160_225899984_a.jpg" alt="Instagram photo" border="5"></td> 
+      <td><p>Hi there! I'm Brady Painter, a Seattle transplant. I am searching for a web deveopment career that offers me an opportunity to use my knowledge of HTML, CSS & JavaScript and my understanding and appreciation of Deaf culture in order to provide web services for the Deaf community. In my spare time I love going out with friends, playing video games, and also have a huge affection for pets.
+      </p></td>
+      <td><img src="https://instagram.fsnc1-1.fna.fbcdn.net/t51.2885-19/s150x150/12912419_506724922845160_225899984_a.jpg" alt="Instagram photo" border="5"></td> 
     </table>
   </section>
 
@@ -42,6 +44,8 @@
       </tbody>
     </table>
   </section>
+
+  <hr class="hr-bold">
 
     <script></script>
   </body>
