--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,8 @@
   </head>
   <body>
 
+  <hr class="hr-bold">
+
   <section>
     <h1>Brady Painter</h1>
   </section>
@@ -24,9 +26,9 @@
   <section>
   <h3>EXPERIENCE</h3>
     <table> 
-    <td><p>I am currently taking a Front-End Web Development at General Assembly where I am learning HTML, CSS, JavaScript & jQuery and how to be an awesome developer!
-    </p></td>
-    <td><img src="https://instagram.fsnc1-1.fna.fbcdn.net/t51.2885-19/s150x150/12912419_506724922845160_225899984_a.jpg" alt="Instagram photo" border="5"></td> 
+      <td><p>I am currently taking a Front-End Web Development at General Assembly where I am learning HTML, CSS, JavaScript & jQuery and how to be an awesome developer!
+      </p></td>
+      <td><img src="https://instagram.fsnc1-1.fna.fbcdn.net/t51.2885-19/s150x150/12912419_506724922845160_225899984_a.jpg" alt="Instagram photo" border="5"></td> 
     </table>
   </section>
 
@@ -37,12 +39,12 @@
     <table class="table-portfolio" border="1" align="center">
       <thead>
         <tr>
-          <td>Coming soon</td>
-          <td>Coming soon</td>
+          <td class="border-td">Coming soon</td>
+          <td class="border-td">Coming soon</td>
         </tr>
         <tr>
-          <td>Coming soon</td>
-          <td>Coming soon</td>
+          <td class="border-td">Coming soon</td>
+          <td class="border-td">Coming soon</td>
         </tr>
       </thead>
     </table>
@@ -60,6 +62,8 @@
       </tbody>
     </table>
   </section>
+
+  <hr class="hr-bold">
 
     <script></script>
   </body>
